--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
   "dependencies": {
     "@sendgrid/mail": "^7.4.5",
     "bcryptjs": "^2.4.3",
+    "cloudinary": "^1.26.3",
     "concurrently": "^6.1.0",
     "cookie-parser": "^1.4.5",
     "cors": "^2.8.5",
