added email with order to users

--- a/client/package.json
+++ b/client/package.json
@@ -46,9 +46,5 @@
       "last 1 safari version"
     ]
   },
-  "proxy": {
-    "/api": {
-      "target": "http://localhost:8080"
-    }
-  }
+  "proxy":  "http://localhost:8080"
 }
