--- a/client/package.json
+++ b/client/package.json
@@ -46,5 +46,9 @@
       "last 1 safari version"
     ]
   },
-  "proxy":  "http://localhost:8080"
+  "proxy": {
+    "/api": {
+      "target": "http://localhost:8080"
+    }
+  }
 }
